First cut of working application.

--- a/src/SecretSharingPads.less
+++ b/src/SecretSharingPads.less
@@ -1,3 +1,5 @@
+@include "./common.less";
+
 @screen-page-spacing: 1cm;
 
 @print-margin: 1.25cm;
@@ -52,7 +54,36 @@ body {
 			display: none;
 		}
 		
+		display: flex;
+		flex-direction: column;
+		
+		align-items: center;
+		justify-content: center;
+		
+		// The warning
+		span {
+			padding: 1ex;
+			
+			margin-top: @screen-page-spacing;
+			
+			border-style: dashed;
+			border-width: 1px;
+			border-color: #FAA;
+			
+			background-color: #FFFAFA;
+			
+			color: #A00;
+		
+			flex-grow: 1;
+			
+			font-size: 130%;
+			font-weight: bold;
+			font-style: normal;
+		}
+		
 		button {
+			flex-grow: 0;
+			
 			// Reset button style
 			padding: 0;
 			border: none;
