Add logo and refine wording.

--- a/src/SecretEntryForm.less
+++ b/src/SecretEntryForm.less
@@ -266,6 +266,11 @@ textarea {
 			padding-left: 1em;
 			padding-bottom: 0.5em;
 		}
+		
+		h1 img {
+			float: none;
+			padding: 0;
+		}
 	}
 	
 	.description {
