--- a/src/SecretSharingPads.less
+++ b/src/SecretSharingPads.less
@@ -184,21 +184,18 @@ body {
 			border-top-color: black;
 		}
 		
-		@header-spacing: 5mm;
-		
 		.Header {
 			display: table-header-group;
 			
 			.inner {
-				padding-bottom: @header-spacing/2;
-				margin-bottom: @header-spacing/2;
+				margin-bottom: 2.5mm;
 				
 				border-bottom-width: 2pt;
 				border-bottom-style: solid;
 				border-bottom-color: black;
 				
 				display: flex;
-				align-items: flex-end;
+				align-items: center;
 				
 				h1 {
 					flex-grow: 1;
