--- a/src/SecretSharingPads.less
+++ b/src/SecretSharingPads.less
@@ -176,23 +176,11 @@ body {
 			margin-bottom: 0.5em;
 		}
 		
-		hr {
-			border-style: none;
-			
-			border-top-width: 2pt;
-			border-top-style: solid;
-			border-top-color: black;
-		}
-		
 		.Header {
 			display: table-header-group;
 			
 			.inner {
 				margin-bottom: 2.5mm;
-				
-				border-bottom-width: 2pt;
-				border-bottom-style: solid;
-				border-bottom-color: black;
 				
 				display: flex;
 				align-items: center;
@@ -226,8 +214,24 @@ body {
 		.Instructions {
 			text-align: justify;
 			
+			background-color: #FAFAFA;
+			
+			padding: 1.5em;
+			
+			border-style: solid;
+			border-color: #AAA;
+			border-width: 1pt;
+			
+			h2:first-child {
+				margin-top: 0;
+			}
+			
+			p:last-child {
+				margin-bottom: 0;
+			}
+			
 			.steps {
-				padding-top: 0.5em;
+				padding-top: 1ex;
 				
 				display: grid;
 				
