Simplify pad creator.

--- a/src/SecretEntryForm.less
+++ b/src/SecretEntryForm.less
@@ -16,12 +16,15 @@
 	}
 }
 
+@page-padding: 10mm;
 
-body {
+body.form-page {
 	font-family: sans;
 	
 	margin: 0;
 	padding: 0;
+	
+	background-color: #555;
 }
 
 input, textarea {
@@ -178,9 +181,11 @@ textarea {
 	}
 	
 	.add-button-area {
+		margin-top: 1em;
+		
 		display: flex;
 		flex-direction: column;
-		align-items: stretch;
+		align-items: center;
 		
 		button {
 			.button-reset();
@@ -230,6 +235,10 @@ textarea {
 		
 		margin: 0;
 		padding: 0;
+		
+		margin-bottom: 1em;
+		
+		text-align: center;
 	}
 	
 	h2 {
@@ -242,7 +251,7 @@ textarea {
 		margin: 0;
 		padding: 0;
 		
-		padding-bottom: 0.5ex;
+		padding-bottom: 0.5em;
 	}
 	
 	p {
@@ -253,27 +262,39 @@ textarea {
 		flex-grow: 0;
 		
 		&:not(:last-child) {
-			border-bottom-style: solid;
-			border-bottom-width: 1px;
-			border-bottom-color: lightgray;
-			
-			margin-bottom: 1em;
-			padding-bottom: 1em;
+			margin-bottom: 3em;
 		}
 	}
 	
-	.introduction {
-		img {
-			float: right;
-			padding-left: 1em;
-			padding-bottom: 0.5em;
-		}
+	.warning {
+		padding: 1em;
 		
-		h1 img {
-			float: none;
-			padding: 0;
+		margin-left: -@page-padding;
+		margin-right: -@page-padding;
+		
+		padding-left: @page-padding;
+		padding-right: @page-padding;
+		
+		border-style: dashed;
+		border-width: 1px;
+		border-color: #FAA;
+		
+		border-left-style: none;
+		border-right-style: none;
+		
+		background-color: #FFF0F0;
+		
+		color: #A00;
+		
+		ul li {
+			margin-top: 0.75ex;
+			margin-bottom: 0.75ex;
 		}
 	}
+	.centered-warning {
+		text-align: center;
+	}
+		
 	
 	.description {
 		
@@ -302,25 +323,14 @@ textarea {
 	}
 	
 	.create-pads-section {
-		.hints {
-			margin: 1em;
-			padding: 1ex;
-			
-			border-style: dashed;
-			border-width: 1px;
-			border-color: #FAA;
-			
-			background-color: #FFFAFA;
-			
-			color: #A00;
-			
-			ul li {
-				margin-top: 0.75ex;
-				margin-bottom: 0.75ex;
-			}
-		}
-		
 		.submission-bar {
+			background-color: #EEE;
+			
+			margin: -@page-padding;
+			margin-top: 0;
+			
+			padding: @page-padding;
+			
 			display: flex;
 			flex-direction: row;
 			align-items: center;
@@ -336,10 +346,17 @@ textarea {
 			margin-top: 1em;
 			margin-bottom: 1em;
 			
+			span {
+				font-weight: bold;
+			}
+			
 			input {
 				margin-left: 1ex;
 				
-				width: 4em;
+				font-size: 130%;
+				
+				width: 2.5em;
+				padding: 0.5ex;
 				
 				&:not(:valid) {
 					background-color: #FDD;
@@ -354,14 +371,20 @@ textarea {
 			
 			font-weight: bold;
 			
+			color: white;
+			@button-color: #558dd5;
+			background-color: @button-color;
+			
 			border-style: solid;
 			border-width: 3px;
-			border-color: black;
+			border-color: #204a87;
 			
-			background-color: #F0F0F0;
+			border-radius: 1ex;
+			
+			padding: 1em;
 			
 			&:hover, &:focus {
-				background-color: #FAFAFA;
+				background-color: lighten(@button-color, 10%);
 				outline: none;
 			}
 			
@@ -370,12 +393,8 @@ textarea {
 			}
 			
 			&:active {
-				background-color: #EEEEEE;
+				background-color: darken(@button-color, 10%);
 			}
-			
-			border-radius: 1ex;
-			
-			padding: 1ex;
 		}
 	}
 }
@@ -389,16 +408,18 @@ textarea {
 	padding: 1.5em;
 	
 	.inner {
+		background-color: white;
+	
 		flex-grow: 1;
 		max-width: 800px;
 		
 		border-style: solid;
 		border-width: 1px;
-		border-color: lightgray;
+		border-color: black;
 		
-		padding: 1em;
+		padding: @page-padding;
 		
 		@offset: 1mm;
-		box-shadow: @offset @offset 2*@offset lightgray;
+		box-shadow: @offset @offset 2*@offset rgba(0, 0, 0, 0.5);
 	}
 }
