--- a/src/SecretEntryForm.less
+++ b/src/SecretEntryForm.less
@@ -236,7 +236,7 @@ textarea {
 		margin: 0;
 		padding: 0;
 		
-		margin-bottom: 1em;
+		margin-bottom: 1.5em;
 		
 		text-align: center;
 	}
@@ -268,6 +268,8 @@ textarea {
 	
 	.warning {
 		padding: 1em;
+		
+		text-align: center;
 		
 		margin-left: -@page-padding;
 		margin-right: -@page-padding;
@@ -405,7 +407,7 @@ textarea {
 	align-items: flex-start;
 	justify-content: center;
 	
-	padding: 1.5em;
+	padding: @page-padding;
 	
 	.inner {
 		background-color: white;
